<resources>
    <string name="app_name">Mmaps</string>
    <string name="app_name_debug">Mmaps (debug)</string>
    <string name="action_settings">Settings</string>
    <string name="action_back">Back</string>
    <string name="action_search">Search</string>
    <string name="search_in_maps">Search Maps</string>
    <string name="directions_from">From</string>
    <string name="directions_to">To</string>
    <string name="directions">Directions</string>
    <string name="my_location">My Location</string>
    <string name="searching">Searching...</string>
    <string name="no_result">Sorry,no result</string>
    <string name="reverse">Reverse</string>
    <string name="route_options">Route options</string>
    <string name="done">DONE</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="back">BACK</string>
    <string name="walk">Walk</string>
    <string name="starting_point">Starting point</string>
    <string name="arrive_destination">Arrive destination</string>
    <string name="ride_x_stops">Ride %1$d stops</string>
    <string name="duration_and_distance">%1$s (%2$s)</string>

    <string-array name="route_options_drive">
        <item>Save Money</item>
        <item>Avoid Congestion</item>
        <item>No Highways</item>
        <item>Short Distance</item>
        <item>No Expressways</item>
    </string-array>

    <string-array name="route_options_bus">
        <item>Default</item>
        <item>Less money</item>
        <item>Fewer transfers</item>
        <item>Less walking</item>
        <item>More comfortable</item>
        <item>No subway</item>
    </string-array>

    <string-array name="route_options_walk">
        <item>Default</item>
        <item>Multi paths</item>
    </string-array>

    <string name="hour">hr</string>
    <string name="minute">min</string>
    <string name="second">sec</string>

    <string name="choose_on_map">Choose on map</string>
    <string name="chosen_on_map">Chosen on map</string>
    <string name="map_under_pin">Pan &amp; zoom map under pin</string>

    <string name="bus_include_night_bus"> include night bus </string>
    <string name="bus_duration_start_from">start from %1$s</string>
    <string name="via_roads">Via %1$s</string>

    <string name="last_boom">already collected last crash log,please go to [Settings]->[Send feedback]</string>
    <string name="error_no_location_permission">require location permission.</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_no_connection">No Internet Connection</string>
    <string name="error_over_directions_range">Over directions range</string>
    <string name="error_invalid_parameter">Invalid parameter \n
        if you are querying bus route,the query not supports cross city.</string>
    <string name="error_socket_timeout">Connection timeout</string>
    <string name="error_out_of_service">Out of service \n
        only support China mainland.</string>
    <string name="error_out_of_quota">Out of query quota</string>
    <string name="error_route_failure">Query route failed</string>

    <string name="satellite">Satellite</string>
    <string name="traffic">Traffic</string>

    <string name="action_download_start">start</string>
    <string name="action_download_pause">pause</string>
    <string name="action_check_update">check&amp;update</string>

    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading_with_percent">Downloading %d %%</string>
    <string name="unzipping_with_percent">Unzipping %d %%</string>
    <string name="paused">Paused</string>
    <string name="stopped">Stopped</string>
    <string name="io_exception">IO Exception</string>
    <string name="network_exception">Network Exception</string>
    <string name="waiting_downloading">Waiting</string>
    <string name="error_redownload">Error,please redownload</string>
    <string name="already_downloaded">Already downloaded</string>

    <string name="offline_map_download">Offline Map Download</string>
    <string name="offline_map_download_complete">Offline Map Download complete</string>
    <string name="offline_map_download_failed">Offline Map Download failed</string>
    <string name="download_list">Download list</string>
    <string name="city_list">City list</string>
    <string name="really_remove_offline_map">Really remove this city\'s offline map?</string>
    <string name="remove_maps_success">Removed %1$s \'s offline maps</string>
    <string name="remove_maps_failed">Removing %1$s \'s offline maps failed</string>

    <string name="note">Note</string>

    <string name="navi_attention">Attention!</string>
    <string name="navi_attention_msg">This feature is experimental,not fully implemented.use it at your risk!\n
        This app is not responsible for losses of lives and property,route accuracy,route fees,and so on.\n
        please abide by the local law,and drive safely.
    </string>

    <string name="navi_please_enable_gps">Please enable GPS</string>
    <string name="navi_really_exit">Do you really exit navigation?</string>
    <string name="navi_not_supported_strategy">this strategy is not supported,please consider another.
        \nOnly supports following strategies:
        \nDefault, Save Money, Avoid Congestion,
        \nShort Distance,No Expressways(including Highways)
    </string>
    <string name="navi_failure">Navigation failed.</string>
    <string name="navi_permission_failed">Phone and Location permissions are required for navigation.</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="dev">Dev</string>
    <string name="thanks">Thanks</string>
    <string name="version">Version</string>
    <string name="open_source">Open source</string>
    <string name="license">Open source License</string>
    <string name="feedback">Send Feedback</string>
    <string name="feedback_summary">send recent crash report</string>
    <string name="feedback_no_crash_reports">crash reports not found</string>

    <string name="not_installed_email">could not find email apps</string>

    <string name="navi_settings">Navigation Settings</string>
    <string name="navi_keep_screen_bright">Keep screen bright</string>
    <string name="navi_night_mode">Night Mode</string>
    <string name="navi_recalc_for_jam">Recalculate route for traffic jam</string>
    <string name="navi_recalc_for_jam_summary">only used for driving,requires network connection</string>
    <string name="navi_recalc_for_yaw">Recalculate route for yaw</string>
    <string name="navi_recalc_for_yaw_summary">only used for driving,requires network connection</string>
    <string name="navi_voice_navigation">Voice Navigation</string>
    <string name="navi_voice_navigation_enable">Enable Voice Navigation</string>

    <string name="show_list">Show list</string>
    <string name="clear_recent_search">Clear recent search</string>

    <string name="action_save">Save</string>
    <string name="action_saved">Saved</string>
    <string name="favorite">Favorite</string>
    <string name="choose_from_favorites">Choose from favorites</string>
</resources>
