<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

    <Preference
        android:key="navi_settings"
        android:title="@string/navi_settings" />

    <Preference
        android:key="clear_recent_search"
        android:title="@string/clear_recent_search" />

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:key="version"
            android:title="@string/version" />

        <Preference
            android:summary="shenm233 (darkgenlotus@gmail.com)"
            android:title="@string/dev" />

        <Preference
            android:summary="icons and 繁体中文 by shiunghanching@coolapk"
            android:title="@string/thanks" />

        <Preference
            android:key="open_source"
            android:title="@string/open_source" />

        <Preference
            android:key="license"
            android:title="@string/license" />

        <Preference
            android:key="feedback"
            android:summary="@string/feedback_summary"
            android:title="@string/feedback" />

    </PreferenceCategory>

</PreferenceScreen>